--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@use-date-input/core",
-  "version": "0.1.0-beta.0",
+  "version": "0.1.1-beta.0",
   "author": "Mark Tate",
   "description": "@use-date-input - Core component and hooks",
   "license": "MIT",
@@ -31,7 +31,7 @@
   "dependencies": {
     "@popperjs/core": "^2.4.2",
     "@seznam/compose-react-refs": "1.0.4",
-    "@use-date-input/common": "^0.1.0",
+    "@use-date-input/common": "^0.1.1-beta.0",
     "clsx": "^1.0.2",
     "prop-types": "^15.7.2",
     "react-focus-lock": "^2.2.1",
