build: add registry to publishConfig

--- a/packages/dayjs-adapter/package.json
+++ b/packages/dayjs-adapter/package.json
@@ -27,7 +27,8 @@
     "dayjs": ">=1.8.24"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/"
   },
   "scripts": {
     "build": "rollup -c ../../config/rollup/rollup.config.js",
@@ -46,5 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "gitHead": "80d58a499c25d1f350e14487b486e2c98f46c13c"
 }
