--- a/packages/moment-adapter/package.json
+++ b/packages/moment-adapter/package.json
@@ -28,7 +28,8 @@
     "moment": ">=2.24.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/"
   },
   "scripts": {
     "build": "rollup -c ../../config/rollup/rollup.config.js",
@@ -47,5 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "gitHead": "80d58a499c25d1f350e14487b486e2c98f46c13c"
 }
