--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -54,7 +54,8 @@
     "styled-components": ">=5.1.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/"
   },
   "scripts": {
     "build": "rollup -c",
@@ -73,5 +74,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "gitHead": "80d58a499c25d1f350e14487b486e2c98f46c13c"
 }
