--- a/packages/date-fns-adapter/package.json
+++ b/packages/date-fns-adapter/package.json
@@ -27,8 +27,7 @@
     "date-fns": ">=2.12.0"
   },
   "publishConfig": {
-    "access": "public",
-    "registry": "https://npm.pkg.github.com/"
+    "access": "public"
   },
   "scripts": {
     "build": "rollup -c ../../config/rollup/rollup.config.js",
@@ -47,6 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "gitHead": "80d58a499c25d1f350e14487b486e2c98f46c13c"
+  }
 }
