--- a/packages/date-fns-adapter/package.json
+++ b/packages/date-fns-adapter/package.json
@@ -20,8 +20,7 @@
   "main": "dist/index.js",
   "module": "src/index.js",
   "dependencies": {
-    "@use-date-input/common": "^0.1.1-beta.0",
-    "undefined": "/Users/mark/Documents/dev/use-date-input/packages/common"
+    "@use-date-input/common": "^0.1.3-beta.0"
   },
   "peerDependencies": {
     "date-fns": ">=2.12.0"
