--- a/packages/luxon-adapter/package.json
+++ b/packages/luxon-adapter/package.json
@@ -21,8 +21,7 @@
   "main": "dist/index.js",
   "module": "src/index.js",
   "dependencies": {
-    "@use-date-input/common": "^0.1.1-beta.0",
-    "undefined": "/Users/mark/Documents/dev/use-date-input/packages/common"
+    "@use-date-input/common": "^0.1.3-beta.0"
   },
   "peerDependencies": {
     "luxon": ">=1.23.0"
