--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -28,6 +28,9 @@
   },
   "main": "dist/index.js",
   "module": "src/index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "rollup -c",
     "prettier": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
