--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,6 +5,8 @@
   "description": "@use-date-input - Core component and hooks",
   "license": "MIT",
   "main": "dist/index.js",
+  "jsnext:main": "dist/index.esm.js",
+  "module": "dist/index.esm.js",
   "keywords": [
     "calendar",
     "date",
@@ -14,6 +16,7 @@
     "date-range",
     "hook",
     "input",
+    "use-date-input",
     "useDateInput",
     "useDateRange",
     "react",
@@ -27,7 +30,6 @@
   "bugs": {
     "url": "https://github.com/mark-tate/use-date-input/issues"
   },
-  "module": "src/index.js",
   "dependencies": {
     "@popperjs/core": "^2.4.2",
     "@seznam/compose-react-refs": "1.0.4",
