build: reduce bundle size

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -33,6 +33,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "dist/index*.js"
+  ],
   "scripts": {
     "build": "rollup -c",
     "prettier": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
