--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -56,6 +56,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "dist/index*.js"
+  ],
   "scripts": {
     "build": "rollup -c",
     "prettier": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
