--- a/packages/date-fns-adapter/package.json
+++ b/packages/date-fns-adapter/package.json
@@ -30,6 +30,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "dist/index*.js"
+  ],
   "scripts": {
     "build": "rollup -c ../../config/rollup/rollup.config.js",
     "prettier": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
