--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -36,6 +36,7 @@
   "files": [
     "dist/index*.js"
   ],
+  "sideEffects": false,
   "scripts": {
     "build": "rollup -c",
     "prettier": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
