--- a/packages/luxon-adapter/package.json
+++ b/packages/luxon-adapter/package.json
@@ -34,6 +34,7 @@
   "files": [
     "dist/index*.js"
   ],
+  "sideEffects": false,
   "scripts": {
     "build": "rollup -c ../../config/rollup/rollup.config.js",
     "prettier": "prettier --write \"**/*.+(js|jsx|json|css|md)\"",
