build: change publish to publish:npm

--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "lint": "lerna run --stream lint -- --fix",
     "prettier": "lerna run prettier --stream",
     "publish:git": "lerna version prepatch --conventional-commits --conventional-prerelease --preid beta",
-    "publish": "lerna publish from-git",
+    "publish:npm": "lerna publish from-git",
     "storybook": "start-storybook -p 9009 -s public",
     "test": "lerna run test --stream"
   },
