fix: modernize the language for allowable list of refs in Popper and move to it's own package.
As Popper is an optional element, move to it's own package.

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -30,6 +30,10 @@
   "bugs": {
     "url": "https://github.com/mark-tate/use-date-input/issues"
   },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
+  },
   "publishConfig": {
     "access": "public"
   },
