--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "lerna": "^3.22.0",
+    "react-material-ui-carousel": "^1.8.2",
     "prettier": "^1.18.2",
     "regenerator-runtime": "^0.13.5",
     "rollup": "^2.13.1",
