--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
+    "gatsby-plugin-material-ui":"^2.1.10",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "lerna": "^3.22.0",
